# newton-old

./: .clang-tidy  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  appveyor.yml
.github/workflows/: ci.yml
cmake/: ClangTools.cmake  CompileOptions.cmake  CompilerCheck.cmake  Options.cmake  PrintInfo.cmake
config/: config.h.in
newton/: CMakeLists.txt
newton/include/newton/: newton.h
newton/include/newton/base/: NtDefs.h
tests/: main.cpp
